--- a/TestApp/TestApp/TestApp.csproj
+++ b/TestApp/TestApp/TestApp.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Outputs\" />
@@ -26,6 +27,7 @@
     <None Remove="Interfaces\" />
     <None Remove="sqlite-net-pcl" />
     <None Remove="Models\" />
+    <None Remove="System.Data.SqlClient" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Outputs\" />
